<resources>
    <string name="app_name">BusinessOffers</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="action_settings">Settings</string>
    <string name="geocoding_key">AIzaSyBX8QL0nOlv_q1RtDaWY-NJBwPa2CivwB0</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_username">Please enter username</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_location">Confirm Location</string>
    <string name="user_name">Username</string>
    <string name="category">Category</string>
    <string name="service">Service</string>
    <string name="keywords">Keywords</string>
    <string name="address">Address</string>
    <string name="error_invalid_phone">Enter valid phone number</string>
    <string name="digits_numeric_only1">1234567890+</string>
    <string name="item_image_contentDescription">Country flag</string>
    <string name="item_preview_country">Israel (‫ישראל‬‎)</string>
    <string name="item_preview_dialCode">+972</string>
    <string name="google_places_api">AIzaSyBtsPuOFakB14gAg_4W1I21Kb1L6CwTmbM</string>
    <string name="offers_">offers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_">Profile</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dashboard">Dashboard</string>
    <string name="gallery">Gallery</string>
    <string name="Rs">\u20B9</string>

</resources>
